Enhances mdmfs(8) to mount md-based device such as uzip. Examples of use can be found in the PR text.

PR: 103501
MFC after:	1 week